fix heading alignment

--- a/core/styles/_base.sections.headings.less
+++ b/core/styles/_base.sections.headings.less
@@ -51,6 +51,7 @@
 h1, h2, h3, h4, h5, h6 {
   font-family: @project_font_family_heading;
   font-weight: 800; // "ExtraBlack", special font-weight for 'Optima' family
+  text-align: left; // for when nested inside justified content
 }
 h1 {
   font-variant: small-caps;
