--- a/core/styles/_trumps.less
+++ b/core/styles/_trumps.less
@@ -46,9 +46,3 @@
     #HELPER CLASSES
 \*+++++++++++++++++++*/
 //++++ #end HELPER CLASSES ++++//
-
-.c-Document {
-  h1, h2, h3, h4, h5, h6 {
-    text-align: left;
-  }
-}
