--- a/core/styles/project.css
+++ b/core/styles/project.css
@@ -95,6 +95,7 @@ h5,
 h6 {
   font-family: 'Optima', 'Seravek', 'Tahoma', sans-serif;
   font-weight: 800;
+  text-align: left;
 }
 h1 {
   font-variant: small-caps;
@@ -1135,14 +1136,6 @@ code {
 /*+++++++++++++++++++*\
     #HELPER CLASSES
 \*+++++++++++++++++++*/
-.c-Document h1,
-.c-Document h2,
-.c-Document h3,
-.c-Document h4,
-.c-Document h5,
-.c-Document h6 {
-  text-align: left;
-}
 /*################################*\
     _helpers.less
 \*################################*/
